Move non-cgi script stuff out of cgi.

--- a/httpd-conf/apache24-master.conf
+++ b/httpd-conf/apache24-master.conf
@@ -28,6 +28,7 @@ LoadModule unixd_module modules/mod_unixd.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule headers_module modules/mod_headers.so
+LoadModule proxy_express_module modules/mod_proxy_express.so
 
 
 ###############################################################################
@@ -148,7 +149,7 @@ SSLStaplingCache "shmcb:/tmp/.apache_staplingcache(1048576)"
 
   <VirtualHost 0.0.0.0:4080>
     ServerAdmin webmaster@sdsc.edu
-    ServerName plinky.sdsc.edu
+    ServerName plinky.sdsc.edu:4080
 
     # this instance serves nothing except the 
     # challenges, and does redirects to https
@@ -177,6 +178,9 @@ SSLStaplingCache "shmcb:/tmp/.apache_staplingcache(1048576)"
     #RewriteCond %{HTTPS} !=on
     #RewriteRule ^/?(.*) https://%{HTTP_HOST}/$1 [R=307,L]
   </VirtualHost>
+
+  SSLProxyEngine On 
+  Include /var/tmp/proxyconf.conf
   # allow access to the docroot
   <Directory "/var/tmp/ssakai-htdocs">
     Options Indexes SymLinksIfOwnerMatch Multiviews ExecCGI
@@ -184,7 +188,6 @@ SSLStaplingCache "shmcb:/tmp/.apache_staplingcache(1048576)"
     AllowOverride AuthConfig Indexes FileInfo Limit Options=All,MultiViews
     Require all granted
   </Directory>
-
 </Macro>
 
 # This is the reverse proxy for each deployment
