Generalize config to use info gleaned from 'start' command.

--- a/httpd-conf/apache24-master.conf
+++ b/httpd-conf/apache24-master.conf
@@ -144,8 +144,8 @@ SSLStaplingCache "shmcb:/tmp/.apache_staplingcache(1048576)"
   # there's an ssl and nossl
   # keep the two separate so the files dont get clobbered
   # this is the nossl
-  ErrorLog  "| /usr/sbin/cronolog /var/tmp/ssakai-htroot/errors.nossl.%Y%m%d"
-  CustomLog "| /usr/sbin/cronolog /var/tmp/ssakai-htroot/access.nossl.%Y%m%d" combined
+  ErrorLog  "| /usr/sbin/cronolog ${BASEDIR}/../logs/errors.nossl.%Y%m%d"
+  CustomLog "| /usr/sbin/cronolog ${BASEDIR}/../logs/access.nossl.%Y%m%d" combined
 
   <VirtualHost 0.0.0.0:4080>
     ServerAdmin webmaster@sdsc.edu
@@ -155,7 +155,7 @@ SSLStaplingCache "shmcb:/tmp/.apache_staplingcache(1048576)"
     # challenges, and does redirects to https
     # nonetheless, documentroot needs to exist for 
     # everything to work.
-    DocumentRoot /var/tmp/ssakai-htdocs/
+    DocumentRoot ${BASEDIR}/../htdocs/
 
     # Use this to make letsencrypt certs easy to get with dehydrated
     # https://github.com/lukas2511/dehydrated
@@ -182,7 +182,7 @@ SSLStaplingCache "shmcb:/tmp/.apache_staplingcache(1048576)"
   SSLProxyEngine On 
   Include /var/tmp/proxyconf.conf
   # allow access to the docroot
-  <Directory "/var/tmp/ssakai-htdocs">
+  <Directory "${BASEDIR}/../htdocs">
     Options Indexes SymLinksIfOwnerMatch Multiviews ExecCGI
     AddHandler cgi-script .cgi
     AllowOverride AuthConfig Indexes FileInfo Limit Options=All,MultiViews
