Add subnet checking so proxying to just any IP isn't allowed.
Make config less location-dependent / more portable.

--- a/httpd-conf/apache24-master.conf
+++ b/httpd-conf/apache24-master.conf
@@ -180,7 +180,7 @@ SSLStaplingCache "shmcb:/tmp/.apache_staplingcache(1048576)"
   </VirtualHost>
 
   SSLProxyEngine On 
-  Include /var/tmp/proxyconf.conf
+  Include ${BASEDIR}/../var/proxyconf.conf
   # allow access to the docroot
   <Directory "${BASEDIR}/../htdocs">
     Options Indexes SymLinksIfOwnerMatch Multiviews ExecCGI
