Quiet server signature and tokens, don't listen on port 80. We don't serve anything on port 80, so don't tie up the port.

--- a/httpd-conf/httpd.conf
+++ b/httpd-conf/httpd.conf
@@ -8,10 +8,11 @@
 
 # Standard apache stuff
 ServerRoot "/etc/httpd"
+ServerSignature Off
+ServerTokens Prod
 User apache
 Group apache
 ServerAdmin root@localhost
-Listen 80
 
 
 # load modules
