--- a/image-files/etc/apache2/sites-enabled/000-default.conf
+++ b/image-files/etc/apache2/sites-enabled/000-default.conf
@@ -24,7 +24,7 @@ ProxyHTMLEvents onclick ondblclick onmousedown onmouseup \
                 onunload onsubmit onreset onselect onchange
 
 # global tls config
-Listen 443 https
+Listen 443
 SSLSessionCache         shmcb:/run/httpd/sslcache(512000)
 SSLSessionCacheTimeout  300
 SSLRandomSeed startup file:/dev/urandom  256
