--- a/container-envs.conf
+++ b/container-envs.conf
@@ -18,9 +18,9 @@ export SAT_CONFIG_TTL_SECS=300
 
 # Externally-facing port (usually same as LISTENPORT, but can be
 # something else if DNAT is in use).
-export SAT_CONFIG_EXTPORT=443
+export SAT_CONFIG_EXTPORT=9000
 
 # Externally-facing hostname.
 # This is the base name used to create urls <random>.<EXTBASENAME>
-export SAT_CONFIG_EXTBASENAME=satellite.hammajang.sdsc.edu
+export SAT_CONFIG_EXTBASENAME=hammajang.sdsc.edu
 
