--- a/image-files/etc/apache2/sites-enabled/000-default.conf
+++ b/image-files/etc/apache2/sites-enabled/000-default.conf
@@ -23,8 +23,14 @@ ProxyHTMLEvents onclick ondblclick onmousedown onmouseup \
                 onkeydown onkeyup onfocus onblur onload \
                 onunload onsubmit onreset onselect onchange
 
+# some envs are used by the satellite cgi scripts
+PassEnv SAT_CONFIG_EXTBASENAME SAT_CONFIG_HTTPDSTUBFILE \
+                SAT_CONFIG_TGTIPMASK SAT_CONFIG_DBFILE \
+                SAT_CONFIG_JOBSTATEIPMASK SAT_CONFIG_EXTPORT \
+                SAT_CONFIG_TTL_SECS
+
 # global tls config
-Listen 443
+#Listen 443
 SSLSessionCache         shmcb:/run/httpd/sslcache(512000)
 SSLSessionCacheTimeout  300
 SSLRandomSeed startup file:/dev/urandom  256
@@ -57,4 +63,4 @@ SSLCertificateChainFile /var/secrets/http-server.chain
 </VirtualHost>
 
 # These files get rewritten when satellite/bin/cron runs
-IncludeOptional /var/www/satellite/dynconf/*.conf
+IncludeOptional /var/secrets/proxyconf.conf
