Move container-specific config to satconfig.pm.
Relying on environment variables is painful when the services we're leveraging clear their environment.
... this mostly works. Need to check what happens when the mapping expires.

--- a/container-envs.conf
+++ b/container-envs.conf
@@ -14,7 +14,7 @@ export SAT_CONFIG_TGTIPMASK="10.0.0.0/8"
 export SAT_CONFIG_JOBSTATEIPMASK="10.1.1.1/32"
 
 # Validity of proxy session, counter restarts when token is redeemed.
-export SAT_CONFIG_TTL_SECS=300
+export SAT_CONFIG_TTL_SECS=1200
 
 # Externally-facing port (usually same as LISTENPORT, but can be
 # something else if DNAT is in use).
