--- a/image-files/etc/apache2/sites-enabled/000-default.conf
+++ b/image-files/etc/apache2/sites-enabled/000-default.conf
@@ -24,9 +24,10 @@ ProxyHTMLEvents onclick ondblclick onmousedown onmouseup \
                 onunload onsubmit onreset onselect onchange
 
 # some envs are used by the satellite cgi scripts
-PassEnv SAT_CONFIG_EXTBASENAME SAT_CONFIG_HTTPDSTUBFILE \
-                SAT_CONFIG_TGTIPMASK SAT_CONFIG_DBFILE \
-                SAT_CONFIG_JOBSTATEIPMASK SAT_CONFIG_EXTPORT \
+PassEnv SAT_CONFIG_EXTBASENAME \
+                SAT_CONFIG_TGTIPMASK \
+                SAT_CONFIG_JOBSTATEIPMASK \
+                SAT_CONFIG_EXTPORT \
                 SAT_CONFIG_TTL_SECS
 
 # global tls config
