Allow multiple tgtipmasks.

--- a/container-envs.conf
+++ b/container-envs.conf
@@ -1,12 +1,13 @@
-# The contents of this file is sourced by a patched version of
-# /etc/apache2/envvars.
-# Use bash syntax.
 # Any changes to this file will not be reflected in the container until
 # the image is rebuilt with mk-dockerimage and container rebuilt to use
 # the new image with mk-dockercontainer
 
+# for podman/docker create
+export NETWORK="521net"
+export IP="192.31.21.51"
+
 # Accept proxy creation requests from IPs in this CIDR.
-export SAT_CONFIG_TGTIPMASK="10.0.0.0/8"
+export SAT_CONFIG_TGTIPMASK="132.249.0.0/16 99.50.200.147/32"
 
 # Accept jobstate updates from IPs in this CIDR.
 # Any user on any host allowed by this CIDR can submit job states, so
@@ -22,5 +23,5 @@ export SAT_CONFIG_EXTPORT=9000
 
 # Externally-facing hostname.
 # This is the base name used to create urls <random>.<EXTBASENAME>
-export SAT_CONFIG_EXTBASENAME=hammajang.sdsc.edu
+export SAT_CONFIG_EXTBASENAME=apples.sdsc.edu
 
