Add newer progress page, add some firewall rules to container.

--- a/container-envs.conf
+++ b/container-envs.conf
@@ -7,7 +7,7 @@ export NETWORK="521net"
 export IP="192.31.21.51"
 
 # Accept proxy creation requests from IPs in this CIDR.
-export SAT_CONFIG_TGTIPMASK="132.249.0.0/16 198.202.64.0/18"
+export SAT_CONFIG_TGTIPMASK="132.249.0.0/16 198.202.64.0/18 52.9.136.88/32 54.183.82.136/32  52.8.18.203/32"
 
 # Accept jobstate updates from IPs in this CIDR.
 # Any user on any host allowed by this CIDR can submit job states, so
